# hi-ide

./: .gitignore  README.md  SETUP.md  langgraph.json
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/langgraph/: state.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/components/: CopilotKitMock.jsx  StructuredUI.jsx
frontend/pages/: _app.jsx  agent.jsx  index.jsx
frontend/styles/: globals.css
src/: .gitignore  pyproject.toml
