[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-langgraph>=0.0.38",
    "copilotkit>=0.1.94",
    "fastapi>=0.136.3",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "uvicorn>=0.49.0",
]
